
5.2b1 -> 5.3a1
    - jbj: header: fix: re-initialize headers from pool more carefully.
    - jbj: rpmps: fix: remove the hack-o-round, handle rpmps like other pools.
    - jbj: yarn: convert dbiIndex to usage mutex with refcounts.
    - jbj: yarn: convert Package to usage mutex with refcounts.
    - jbj: yarn: convert Spec to usage mutex with refcounts.
    - jbj: yarn: convert DIGEST_CTX to usage mutex with refcounts.
    - jbj: eliminate (unused) DB_DBT_MALLOC flag while loading rpmdb headers.
    - jbj: bump sonames to libfoo-5.2.
    - jbj: rpmmi: rename the other methods for the match iterator object.
    - proyvind: make it possible to set macro files to load predefines from by
	defining PREMACROFILES at build time.
    - jbj: rpmmi: rename the typedef and rpmmi{Init,Next,Free} methods.
    - jbj: rpmmi: split out a pool destructor (prior to using).
    - jbj: mire: handle items from _mirePool like all other pools.
    - bero: adjust find-debuginfo.sh to new location of debugedit
    - jbj: rpmds: dereference/flush global items earlier, before pool teardown.
    - jbj: rpmds: use _rpmdsPool, not heap, for rpmdsThis/rpmdsSingle as well.
    - jbj: rpmds: fix: rpmdsThis/rpmdsSingle assume ds->i = 0
	(i.e. actively iterating).
    - jbj: inline rpmlog() to avoid arglist overhead when -O2 is used.
    - jbj: add --with-valgrind homeopathy to measure existing RPM
	insturmentation effects on performance.
    - jbj: don't reset to -O0 with --enable-build-debug and GCC.
    - proyvind: rpmsyck: clean up, use rpmioPool and add destructor.
    - proyvind: rpmhash: add htGetKeys() for retrieving the keys of the hash table.
    - jbj: bash: wire-up internal bash build with RPM AutoFu.
    - jbj: rc: toss the n00b embedding into the -lrpmmisc kitchen sink.
    - jbj: grep: fix: don't segfault if no usage mutex or pool attached.
    - proyvind: remove %distepoch from %provideversion as it will break
	compatibility with rpm <= 4.5.