@@ -1,7 +1,8 @@
 LIBRPMDB_0
 {
   global:
-    _rpmdb_debug;
+    _dbi_debug;
+    _dbiPool;
     db3dbi;
     db3Free;
     db3New;
@@ -85,6 +86,7 @@ LIBRPMDB_0
     rpmAddSignature;
     rpmCheckPassPhrase;
     rpmDatabasePoptTable;
+    _rpmdb_debug;
     _rpmdbPool;
     rpmdbAdd;
     rpmDBArgs;
